--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "faker": "^5.5.3",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.12"
+    "mongoose": "^5.13.12",
+    "node": "^14.18.1"
   }
 }
