--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "expo-cli": "^4.13.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "http-errors": "^1.8.0",
